# comment_django

./: .gitignore  Readme.md  docker-compose.yaml  dockerfile  install_chrome.sh  pyproject.toml
comment_back/: Readme.md  conftest.py  manage.py
comment_back/comment_back/: asgi.py  settings.py  urls.py  wsgi.py
comment_back/crawler/: models.py  pagination.py  pagination_old.py  serializers.py  tests.py  urls.py  utils.py  views.py
comment_back/crawler/crawler/: crawler.py  database.py  gqltest.py  queries.py  selenium_crawler.py
comment_back/crawler/migrations/: 0001_initial.py  0002_rename_series_id_series_id_episode.py  0003_rename_title_episode_name.py  0004_episode_user.py  0005_comment.py  0006_episode_image_src.py  0007_comment_emoticon_comment_like_count.py  0008_alter_comment_emoticon.py  0009_comment_ai_category_comment_ai_processed_at_and_more.py  0010_comment_ai_emotion_score.py  0011_comment_is_spam.py
comment_back/exports/comments/: comments_episode_61823562_20250711_154738.json  comments_episode_61823562_20250711_155558.json
comment_back/llm/: models.py  serializers.py  urls.py  views.py
comment_back/llm/migrations/: 0001_initial.py  0002_alter_commentanalysisresult_id.py  0003_commentssummaryresult.py  0004_remove_commentssummaryresult_content_and_more.py  0005_remove_commentssummaryresult_comments_and_more.py
comment_back/services/: llm_service.py
comment_back/tests/: content.txt  output.txt  test_emotion_api.py
comment_back/user/: models.py  serializers.py  urls.py  views.py
comment_back/user/migrations/: 0001_initial.py  0002_remove_customuser_birth_date_and_more.py
comment_back/user/tests/: test_serializers.py
comment_back/utils/: serializers.py  swagger.py
