[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.8"
drf-spectacular = "^0.27.2"
djangorestframework-simplejwt = "^5.3.1"
gql = "^3.5.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
requests-toolbelt = "^1.0.0"
selenium = "^4.27.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
django-cors-headers = "^4.7.0"
google-genai = "^1.24.0"
django-debug-toolbar = "^5.2.0"
psycopg = "^3.2.9"
pytest = "^8.4.1"
pytest-django = "^4.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
